Preventing multi-photo activity spillage

--- a/src/app-style.css
+++ b/src/app-style.css
@@ -212,6 +212,10 @@ button[disabled]{
   overflow: unset;
 }
 
+.el-carousel__container {
+  overflow: hidden;
+}
+
 .profile{
   text-decoration: none;
   color: #AEECEF;
